Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70181

QtQuickControls 2 disabled MenuItems take part in arrow key navigation

    XMLWordPrintable

Details

    • 1d29b1e36732a7d17ed34c5fa207e7b935f2f41d (qt/qtquickcontrols2/5.12)

    Description

      Disabled menu items in a QtQuickControls 2 menu should be excluded from the navigation with arrow keys. To reproduce the bug, open the menu with Alt+M (be careful that it doesn't open under the mouse cursor to prevent that another than the first itenm becomes the current item (related to QTBUG-69247), and press the Down key multiple times. Item number 2 takes part in the naviagtion and gets highlighted even if it is disabled.

      Navigation the menu with the focus keys (Tab, Shift+Tab) does not show the behavior.

      import QtQuick.Controls 2.3
      
      ApplicationWindow {
          visible: true
          width: 400; height: 400
          menuBar: MenuBar {
              Menu {
                  title: "&Menu"
      
                  MenuItem { text: "Item 1" }
                  MenuItem { text: "Item 2"; enabled: false }
                  MenuItem { text: "Item 3" }
              }
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            enz Markus Enzenberger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes