QQuickMenu: don't give focus to disabled menu items

Change-Id: I7eb394ca3991eae585fbbd8e665c46b11ef64a07
Fixes: QTBUG-70181
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@qt.io>